--- a/ha3/CMakeLists.txt
+++ b/ha3/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("ha3")
 
 # Add source to this project's executable.
-add_executable (ha3 "ha3.cpp"  "matrix.h" "matrix.cpp")
+add_executable (ha3 "ha3.cpp"  "matrix.h" "matrix.cpp" "iterator.h" "iterator.cpp")
 
 # TODO: Add tests and install targets if needed.
