ha6: task 2 complited

--- a/ha6/CMakeLists.txt
+++ b/ha6/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("ha6")
 
 # Add source to this project's executable.
-add_executable (ha6 "ha6.cpp"  "task1.h")
+add_executable (ha6 "ha6.cpp"  "task1.h" "task2.h")
 
 # TODO: Add tests and install targets if needed.
